Update ZIPPLZ_BE/src/main/java/com/example/zipplz_be/global/config/CorsConfig.java